summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: illegal start of statement (no modifiers allowed here)
override def run () {
^