summative.moria.Moria.scala.code
override def run () {
  right(); right()
  while (!estSurBiscuit && !estFaceMur) {
    forward();
    if (estSurBiscuit) {
      prendBiscuit(); 
      while (!estSurBiscuit) {
        backward()
      }
      poseBiscuit();
    }
  }
}